# url-vault

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  mitm_local_cache.py  mitmproxy.md  pyproject.toml
docs/: e2e-smoke.md  specification.md
e2e/: url-vault-self.yaml
mirror_repos/: __init__.py  app.py  cli.py  config.py  sync.py
prefetch.d/: github-com-smprather.yaml  neovim-plugins.yaml
scripts/: run-e2e-clone-smoke.sh  run-e2e-clone-smoke.wsl.sh
tests/: test_app.py  test_cli.py  test_config.py  test_e2e_config.py  test_request_log.py  test_sync.py
url_vault/: __init__.py  app.py  cli.py  config.py  pathing.py  request_log.py  sync.py
